# adb

./: .gitignore  CHANGELOG.md  README.md  charting.toml  pyproject.toml  to-do.txt
data/: BasedeDados_planejamento.xlsx
data/processed/: daily_consolidated.parquet  monthly_consolidated.parquet
data/raw/daily/: cdi.parquet  dolar_ptax.parquet  euro_ptax.parquet  selic.parquet
data/raw/expectations/: ipca_anual.parquet  selic_teste.parquet
data/raw/monthly/: ibc_br_bruto.parquet  ibc_br_dessaz.parquet  igp_m.parquet
docs/: architecture.md  bacen.md  bloomberg.md  charting.md  core.md  data.md  getting-started.md  ibge.md  ipea.md  mte.md  utils.md
docs/advanced/: extending.md  querying.md
docs/internals/: architecture.md  domain.md  infra.md  services.md
docs/providers/: bacen.md  bloomberg.md  ibge.md  ipea.md  mte.md
notebooks/: analysis.ipynb  collection.ipynb  data_collection.ipynb  exploration.ipynb
scripts/: collect_caged.py  debug_indicators.py  debug_loop_behavior.py  explore_expectations_structure.py  generate_full_report.py  inspect_excel.py  investigate_data_format.py  test_consolidate.py  test_consolidate_fix.py  test_datetime_index_fix.py  test_expectations_collector.py  test_sgs_collector.py  verify_caged_consolidation.py  verify_full.py  verify_refactor.py  view_ipea.py
scripts/debugs/: debug_ptax.py  explore_caged_structure.py  explore_expectations.py  verify_cdi.py
scripts/tests/: test_caged_all_columns.py  test_caged_append_fix.py  test_caged_append_problem.py  test_caged_collect_sample.py  test_caged_collector.py  test_caged_column_names.py  test_caged_connection.py  test_caged_decimal_fix.py  test_caged_diagnose_types.py  test_caged_download.py  test_caged_encoding.py  test_caged_final.py  test_caged_inspect_data.py  test_caged_numeric_conversion.py  verify_parallel.py
src/: __init__.py  bcb_client.py  data_manager.py  indicators.py
src/adb/: __init__.py  collector.py  exceptions.py  explorer.py  utils.py
src/adb/bacen/: __init__.py
src/adb/bloomberg/: __init__.py  client.py  collector.py  explorer.py  indicators.py
src/adb/core/: __init__.py  config.py  display.py  exceptions.py  log.py  resilience.py
src/adb/domain/: __init__.py  exceptions.py  explorers.py
src/adb/infra/: __init__.py  config.py  log.py  query.py  resilience.py  storage.py  validation.py
src/adb/ipea/: __init__.py  client.py  collector.py  explorer.py
src/adb/mte/: __init__.py
src/bacen/: __init__.py  base.py
src/bloomberg/: __init__.py  client.py  collector.py  explorer.py
src/core/: __init__.py  indicators.py  parallel.py
src/data/: manager.py
src/ipea/: __init__.py  client.py  collector.py  explorer.py  indicators.py
src/mte/: __init__.py
tests/: conftest.py  test_collector.py  test_explorer.py  test_query.py  test_storage.py  test_utils.py  test_validation.py
(+118 files in other folders)
