[project]
name = "agora-database"
version = "0.1.0"
description = "Coleta e gestao de dados economicos do BCB e outras fontes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bizdays>=1.0.14",
    "cuallee[duckdb]>=0.5.2",
    "duckdb>=1.4.2",
    "ipeadatapy>=0.1.9",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "py7zr>=0.20.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "python-bcb>=0.3.3",
    "rich>=14.3.1",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
bloomberg = [
    "blpapi>=3.25.12.1",
    "xbbg>=0.10.3",
]
notebooks = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
reports = [
    "chartkit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adb"]

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"

[tool.uv.sources]
chartkit = { path = "../chartkit", editable = true }
