[project]
name = "adb"
version = "0.1.0"
description = "Coleta e consulta de dados economicos de multiplas fontes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bizdays>=1.0.14",
    "cuallee[duckdb]>=0.5.2",
    "duckdb>=1.4.2",
    "httpx>=0.28.1",
    "ipeadatapy>=0.1.9",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "platformdirs>=4.9.4",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-bcb>=0.3.4",
    "rich>=14.3.1",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
bloomberg = [
    "blpapi>=3.25.12.1",
    "xbbg>=0.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adb"]

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"

